--- a/styles/home.css
+++ b/styles/home.css
@@ -1,14 +1,33 @@
+#proj-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 100%;
+	overflow-x: auto;
+	padding: 5px;
+}
+
 .proj {
 	height: 200px;
-	width: 200px;
+	width: 300px;
 	background-color: #555;
 	border-radius: 10px;
+	margin-bottom: 10px;
 	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	flex: 0 0 auto;
 }
 
 .proj p {
 	margin: 0;
 	padding: 0;
+}
+
+.proj a {
+	font-weight: bold;
+	color: #ccc;
 }
 
 .proj-title {
@@ -19,4 +38,8 @@
 .proj-sub {
 	font-size: 1.1rem;
 	font-weight: bold;
+}
+
+.proj-links {
+	margin-top: 5px;
 }
