--- a/styles/home.css
+++ b/styles/home.css
@@ -1,16 +1,14 @@
-#proj-wrapper {
+.proj-wrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	max-width: 100%;
 	overflow-x: auto;
-	/*padding: 5px;*/
 }
 
 .proj {
 	height: 200px;
 	width: 300px;
-	background-color: #555;
 	border-radius: 10px;
 	margin-bottom: 10px;
 	padding: 10px;
@@ -18,6 +16,9 @@
 	flex-direction: column;
 	justify-content: flex-end;
 	flex: 0 0 auto;
+	background-color: #555;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .proj p {
@@ -45,7 +46,7 @@
 }
 
 @media(min-width: 745px) {
-	#proj-wrapper {
+	.proj-wrapper {
 		flex-direction: row;
 		flex-wrap: wrap;
 		align-items: flex-start;
